--- a/app/views/hardships/edit.html.erb
+++ b/app/views/hardships/edit.html.erb
@@ -1,12 +1,9 @@
 <main class="mt-5">
   <div class="container">
 
-    <h1 class="text-center">Complete Your Hardship Application</h1>
+    <h1 class="text-center mb-3">Complete Your Hardship Application</h1>
 
     <%= render 'form', hardship: @hardship %>
-
-    <%= link_to 'Show', @hardship %> |
-    <%= link_to 'Back', hardships_path %>
 
   </div> <!-- container -->
 </main>
