--- a/app/views/layouts/_notifications.html.erb
+++ b/app/views/layouts/_notifications.html.erb
@@ -10,10 +10,10 @@
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <%= flash.now[:alert] %>
       </div>
-    <% elsif flash[:alert] %>
+    <% elsif flash[:warning] %>
       <div class="alert alert-warning">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <%= flash[:alert] %>
+        <%= flash[:warning] %>
       </div>
     <% end %>
   </div>
