--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,25 +16,10 @@
           <% @users.each do |user| %>
             <tr>
               <td><%= user.id %></td>
-              <td><%#= user.last_name %>, <%#= user.first_name %></td>
+              <td><%= user.last_name %>, <%= user.first_name %></td>
               <td><%= user.email %></td>
             </tr>
           <% end %>
-          <tr>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
         </tbody>
       </table>
     </div> <!-- responsive table -->
