--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <main>
 
-  <div class="card card-image" style="background-image: url(assets/feet-around-ball.jpg);">
+  <div class="card card-image" style="background-image: url(https://tocacares.s3-us-west-1.amazonaws.com/feet-around-ball.jpg);">
     <div class="text-white text-center rgba-black-strong py-5 px-4">
       <div>
         <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>TOCA Cares</strong></h2>
